# aura

./: .gitignore  README.md
client/: package-lock.json  package.json
server/: bot.py  config.py  pyproject.toml
server/agents/: assistant.txt
